--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -284,8 +284,22 @@
             <div class="team-scorers">
               <!-- Buteurs équipe 1 -->
               <div class="scorers-column left">
-                <div *ngFor="let buteur of getGroupedScorers(match, 1)">
+                <!-- Buteurs actifs -->
+                <div *ngFor="let buteur of getActiveGroupedScorers(match, 1)">
                   <div class="buteur-equipe">
+                    <span>⚽ {{ buteur.nom }}:</span>
+                    <span class="minutes-list left-team">
+                      <ng-container *ngFor="let minute of buteur.minutes; let i = index">
+                        <span *ngIf="i > 0 && i % 5 === 0"><br></span> <!-- Line break after every 5 minutes -->
+                        {{minute}}'<span *ngIf="i < buteur.minutes.length - 1">,</span>
+                        <span *ngIf="buteur.assist" class="assist-info">(Assist: {{buteur.assist}})</span>
+                      </ng-container>
+                    </span>
+                  </div>
+                </div>
+                <!-- Buteurs désactivés -->
+                <div *ngFor="let buteur of getDisabledGroupedScorers(match, 1)">
+                  <div class="buteur-equipe disabled-scorer">
                     <span>⚽ {{ buteur.nom }}:</span>
                     <span class="minutes-list left-team">
                       <ng-container *ngFor="let minute of buteur.minutes; let i = index">
@@ -299,8 +313,22 @@
               </div>
               <!-- Buteurs équipe 2 -->
               <div class="scorers-column right">
-                <div *ngFor="let buteur of getGroupedScorers(match, 2)">
+                <!-- Buteurs actifs -->
+                <div *ngFor="let buteur of getActiveGroupedScorers(match, 2)">
                   <div class="buteur-equipe">
+                    <span>⚽ {{ buteur.nom }}:</span>
+                    <span class="minutes-list right-team">
+                      <ng-container *ngFor="let minute of buteur.minutes; let i = index">
+                        <span *ngIf="i > 0 && i % 5 === 0"><br></span> <!-- Line break after every 5 minutes -->
+                        {{minute}}'<span *ngIf="i < buteur.minutes.length - 1">,</span>
+                        <span *ngIf="buteur.assist" class="assist-info">(Assist: {{buteur.assist}})</span>
+                      </ng-container>
+                    </span>
+                  </div>
+                </div>
+                <!-- Buteurs désactivés -->
+                <div *ngFor="let buteur of getDisabledGroupedScorers(match, 2)">
+                  <div class="buteur-equipe disabled-scorer">
                     <span>⚽ {{ buteur.nom }}:</span>
                     <span class="minutes-list right-team">
                       <ng-container *ngFor="let minute of buteur.minutes; let i = index">
@@ -361,6 +389,9 @@
           <div class="score" style="text-align: center;" (click)="showScoreForm = true">
             <ng-container *ngIf="!showScoreForm">
               {{ selectedMatch.score1 }} - {{ selectedMatch.score2 }}
+              <div class="score-info" style="font-size: 0.7em; opacity: 0.8;">
+                ({{ getActiveGoalsCount(1) }} - {{ getActiveGoalsCount(2) }} buts actifs)
+              </div>
             </ng-container>
             <ng-container *ngIf="showScoreForm">
               <div class="d-flex align-items-center justify-content-center gap-1">
@@ -369,7 +400,7 @@
                        style="width: 42px; text-align: center; padding: 2px 4px;"
                        [(ngModel)]="selectedMatch.score1" 
                        min="0"
-                       (input)="selectedMatch.score1 = validateScore(selectedMatch.score1)"
+                       (input)="selectedMatch.score1 = validateScore(selectedMatch.score1); onScoreChange()"
                        onkeypress="return event.charCode >= 48">
                 <span>-</span>
                 <input type="number" 
@@ -377,7 +408,7 @@
                        style="width: 42px; text-align: center; padding: 2px 4px;"
                        [(ngModel)]="selectedMatch.score2" 
                        min="0"
-                       (input)="selectedMatch.score2 = validateScore(selectedMatch.score2)"
+                       (input)="selectedMatch.score2 = validateScore(selectedMatch.score2); onScoreChange()"
                        onkeypress="return event.charCode >= 48">
               </div>
               
@@ -503,9 +534,11 @@
         
         <div *ngIf="showButeursList">
           <div *ngFor="let buteur of selectedMatch.buteurs; let i = index" class="buteur-item">
-            <div class="buteur-item d-flex justify-content-between align-items-center p-2 border rounded mb-2">
+            <div class="buteur-item d-flex justify-content-between align-items-center p-2 border rounded mb-2"
+                 [ngClass]="{'disabled-goal': isGoalDisabled(i)}">
               <span class="flex-grow-1">
-                <strong [ngClass]="buteur.equipe === 1 ? 'buteur-team1' : 'buteur-team2'">{{ getButeurDisplay(buteur) }}</strong> - <em [ngClass]="buteur.equipe === 1 ? 'buteur-team1' : 'buteur-team2'">{{ buteur.equipe === 1 ? selectedMatch.equipe1 : selectedMatch.equipe2 }}</em>
+                <strong [ngClass]="buteur.equipe === 1 ? 'buteur-team1' : 'buteur-team2'">{{ getButeurDisplay(buteur) }}</strong> 
+                <!-- - <em [ngClass]="buteur.equipe === 1 ? 'buteur-team1' : 'buteur-team2'">{{ buteur.equipe === 1 ? selectedMatch.equipe1 : selectedMatch.equipe2 }}</em> -->
               </span>
               <div>
                 <button class="btn btn-sm btn-primary me-2" 
